tests/paczka2/big_fuzzy/61862232.err
Error in line 1: h2ikDj A302 6,0
Error in line 4: V20EL A58 10,9
Error in line 19: aEeE4c A234 c0,2
Error in line 22: V20EL A02 8,1
Error in line 17: aEeE4c A234 0,5
Error in line 28: MNU A234 30,5
Error in line 29: MNU A58 41,6
Error in line 51: CHXpDYR A234 85,3
Error in line 48: V20EL S722 31,3
Error in line 59: eKvEFd A58 12,5
Error in line 61: aEeE4c S722 81,4
Error in line 63: aEeE4c A58 83,9
Error in line 56: V20EL A302 88,3
Error in line 69: aEeE4c A58 78,1
Error in line 66: CHXpDYR A58 41,9
Error in line 70: aEeE4c A302 100,0
Error in line 80: CHXpDYR A58 95,1
Error in line 94: eKvEFd A[8 60,6
Error in line 89: V20EL A234 67,6
Error in line 104: V20EL A302 69,9
Error in line 114: V20EL A234 74,7
Error in line 118: eKvEFd S722 5,9
Error in line 127: h2ikDj A58 1,8
Error in line 131: eKvEFd A302 95,4
Error in line 138: V20EL A58 73,6
Error in line 134: CHXpDYR A302 28,7
Error in line 153: A58 S722 75,7
Error in line 155: MNU A302 5,0
Error in line 144: CHXpDYR A234 88,5
Error in line 172: eKvEFd A3 2 75, 
Error in line 169: V20EL A58 48,2
Error in line 199: eKvEFd A234 27,2
Error in line 205: A58 A58 14,26
Error in line 212: A58 A58 99,9
Error in line 184: V20EL A234 1,8
Error in line 213: A58 S722 0,5
Error in line 209: MNU A234 64,8
Error in line 219: eKvEFd A234 18,9
Error in line 224: aEeE4c A234 45,2
Error in line 246: A58 A58 118,2
